--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -53,20 +53,31 @@ $nb-themes: nb-register-theme(
     footer-divider-color: #000,
     footer-divider-width: 0px,
     // INPUTS
-    input-placeholder-text-font-family: "Rubik" sans-serif,
+    input-placeholder-text-font-family: "Roboto" sans-serif,
     input-outline-color: #dbdbdb,
     input-basic-text-color: #000000,
     input-basic-placeholder-text-color: #5a5a5a,
-    input-basic-border-color: #dbdbdb,
-    input-basic-focus-border-color: #dbdbdb,
+    input-basic-border-color: #49a889,
+    input-basic-focus-border-color: #49a889,
     input-basic-focus-background-color: #fff,
     input-basic-background-color: #fff,
     input-basic-hover-background-color: #fff,
-    input-basic-hover-border-color: #dbdbdb,
+    input-basic-hover-border-color: #49a889,
     input-basic-disabled-background-color: #f7f9fc,
-    input-basic-disabled-border-color: #e4e9f2,
+    input-basic-disabled-border-color: #49a889,
     input-basic-disabled-text-color: rgba(143, 155, 179, 0.48),
     input-basic-disabled-placeholder-text-color: rgba(143, 155, 179, 0.48),
+    // BUTTONS
+    button-text-font-family: "Roboto" sans-serif,
+    button-filled-basic-text-color: #fff,
+    button-filled-basic-background-color: rgb(102, 102, 102),
+    button-filled-basic-border-color: rgb(102, 102, 102),
+    button-filled-basic-focus-background-color: rgb(129, 129, 129),
+    button-filled-basic-focus-border-color: rgb(129, 129, 129),
+    button-filled-basic-hover-background-color: rgb(129, 129, 129),
+    button-filled-basic-hover-border-color: rgb(129, 129, 129),
+    button-filled-basic-active-background-color: rgb(129, 129, 129),
+    button-filled-basic-active-border-color: rgb(129, 129, 129),
     // ===========================
     // COLOR PALETTE
     // ===========================
