--- a/src/app/public/_index/footer/footer.component.html
+++ b/src/app/public/_index/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12">
-    <div class="d-flex justify-content-between pimp-0">
+    <div class="d-flex justify-content-between pim-0">
       <div class="p-2">
         <p>About</p>
       </div>
