--- a/src/app/public/subjects/subjects.component.html
+++ b/src/app/public/subjects/subjects.component.html
@@ -1,1 +1,153 @@
-<p>subjects works!</p>
+<div class="row">
+  <div id="filters-column" class="col-2 w-100 h-100">
+    <!-- ? Filters -->
+    <div
+      [nbSpinner]="isLoadingFilters"
+      nbSpinnerSize="giant"
+      nbSpinnerStatus="primary"
+      class="fixed"
+    >
+      <ng-container *ngTemplateOutlet="filtersTMPL"></ng-container>
+    </div>
+  </div>
+  <div id="subjects-column" class="col ml-3 w-100 h-100">
+    <!-- ? Subjects -->
+    <ng-container *ngTemplateOutlet="subjectsTMPL"></ng-container>
+  </div>
+</div>
+
+<!-- ? Filters template -->
+<ng-template #filtersTMPL>
+  <h3 class="mt-3"><nb-icon icon="plus-outline"></nb-icon> New Subject</h3>
+  <!-- Search Text Field -->
+  <div id="search-field" class="w-100">
+    <nb-form-field>
+      <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
+      <input
+        type="text"
+        nbInput
+        fullWidth
+        fieldSize="small"
+        placeholder="search subject"
+      />
+    </nb-form-field>
+  </div>
+  <br />
+  <!-- Filter Items -->
+  <ng-container *ngFor="let item of filterItems; let i = index">
+    <h4 id="filter-item-{{ i }}">
+      {{ item.title | titlecase }}
+    </h4>
+    <ng-container *ngFor="let filter of item.items | slice: 0:3; let y = index">
+      <nb-checkbox class="check-box">
+        <p>
+          {{ filter.title | titlecase }}
+        </p>
+      </nb-checkbox>
+    </ng-container>
+    <ng-container *ngIf="item.items.length > 3">
+      <p class="pointer see-more">See more</p>
+    </ng-container>
+  </ng-container>
+</ng-template>
+
+<!-- ? Subjects Template -->
+<ng-template #subjectsTMPL>
+  <div class="row">
+    <div class="col-12 text-center">
+      <h1>Subjects</h1>
+    </div>
+  </div>
+
+  <!-- Subjects List -->
+  <div
+    [nbSpinner]="isLoadingSubjects"
+    nbSpinnerSize="giant"
+    nbSpinnerStatus="primary"
+    *ngFor="let item of subjects; let x = index"
+    id="{{ x }}-subject"
+    class="row mb-3 w-100"
+  >
+    <div class="subject-card">
+      <div class="row">
+        <div class="col-6 subject-image-colum">
+          <!-- Image -->
+          <div class="d-flex justify-content-center align-items-center h-100">
+            <div class="p-2">
+              <nb-icon
+                class="image-icon align-middle"
+                icon="image-outline"
+              ></nb-icon>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 p-3">
+          <div class="subject-content-colum">
+            <!-- Content -->
+            <div class="row">
+              <div class="col-12 col-md-4">
+                <h4 class="subject-card-title">
+                  {{ item.title | titlecase }}
+                </h4>
+                <p>
+                  {{ item.instructor?.name | titlecase }}
+                </p>
+              </div>
+              <div class="col">
+                <div class="d-flex justify-content-end pim-0">
+                  <div class="p-2">
+                    <div class="card-badge h-100">
+                      <p>{{ item.instructor?.time }} ago</p>
+                    </div>
+                  </div>
+                  <div class="p-2">
+                    <div class="card-badge h-100">
+                      <p>{{ item.instructor?.trait | titlecase }}</p>
+                    </div>
+                  </div>
+                  <div class="p-2">
+                    <div class="card-badge h-100">
+                      <p>{{ item.instructor?.attribute }}</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <p>
+                  {{ item.description }}
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-6">
+                <div class="d-flex justify-content-start pim-0 social-icons">
+                  <div class="p-2">
+                    <nb-icon icon="facebook-outline"></nb-icon>
+                  </div>
+                  <div class="p-2">
+                    <nb-icon icon="twitter-outline"></nb-icon>
+                  </div>
+                  <div class="p-2">
+                    <nb-icon icon="globe-2-outline"></nb-icon>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6">
+                <button
+                  nbButton
+                  status="basic"
+                  size="small"
+                  class="float-right pull-right"
+                >
+                  CONTACT
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
