--- a/src/app/public/instructors/instructors.component.html
+++ b/src/app/public/instructors/instructors.component.html
@@ -1,1 +1,186 @@
-<p>instructors works!</p>
+<div class="row">
+  <div id="filters-column" class="col-2 w-100 h-100">
+    <!-- ? Filters -->
+    <div
+      [nbSpinner]="isLoadingFilters"
+      nbSpinnerSize="giant"
+      nbSpinnerStatus="primary"
+      class="fixed"
+    >
+      <ng-container *ngTemplateOutlet="filtersTMPL"></ng-container>
+    </div>
+  </div>
+  <div id="instructors-column" class="col ml-3 w-100 h-100">
+    <!-- ? Instructors -->
+    <ng-container *ngTemplateOutlet="instructorsTMPL"></ng-container>
+  </div>
+</div>
+
+<!-- ? Filters template -->
+<ng-template #filtersTMPL>
+  <h3 class="mt-3"><nb-icon icon="plus-outline"></nb-icon> New Subject</h3>
+  <!-- Search Text Field -->
+  <div id="search-field" class="w-100">
+    <nb-form-field>
+      <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
+      <input
+        type="text"
+        nbInput
+        fullWidth
+        fieldSize="small"
+        placeholder="search subject"
+      />
+    </nb-form-field>
+  </div>
+  <br />
+  <!-- Filter Items -->
+  <ng-container *ngFor="let item of filterItems; let i = index">
+    <h4 id="filter-item-{{ i }}">
+      {{ item.title | titlecase }}
+    </h4>
+    <ng-container *ngFor="let filter of item.items | slice: 0:3; let y = index">
+      <nb-checkbox class="check-box">
+        <p>
+          {{ filter.title | titlecase }}
+        </p>
+      </nb-checkbox>
+    </ng-container>
+    <ng-container *ngIf="item.items.length > 3">
+      <p class="pointer see-more">See more</p>
+    </ng-container>
+  </ng-container>
+</ng-template>
+
+<!-- ? Instructors Template -->
+<ng-template #instructorsTMPL>
+  <div class="row instructors-header">
+    <div class="col-12 text-center">
+      <h1 id="instructors-title">Instructors</h1>
+
+      <span
+        class="float-right pull-right pointer view-txt"
+        (click)="onChangeLayout()"
+      >
+        View &nbsp;
+        <nb-icon *ngIf="longCards" icon="map-outline"></nb-icon>
+        <nb-icon *ngIf="!longCards" icon="grid-outline"></nb-icon>
+      </span>
+    </div>
+  </div>
+
+  <!-- Instructors List - LongCards -->
+  <div class="card-layout-tmpl">
+    <ng-container
+      *ngIf="longCards; then longCardsTMPL; else shortCardsTMPL"
+    ></ng-container>
+  </div>
+</ng-template>
+
+<!-- ? Long Cards -->
+<ng-template #longCardsTMPL>
+  <div id="list-horizontal" class="list-group list-group-horizontal">
+    <div *ngFor="let item of instructors; let i = index">
+      <div class="long-card" [style]="item.mainStyle">
+        <div class="top-layout text-center">
+          <img [src]="item.image" [alt]="item.name" />
+          <h4>
+            {{ item.name | titlecase }}
+          </h4>
+          <p>
+            {{ item.subject | titlecase }}
+          </p>
+          <div class="d-flex justify-content-end pim-0 badges">
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.time }} ago</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.trait | titlecase }}</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.attribute }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="bottom-layout text-center" [style]="item.secondaryStyle">
+          <div class="bt-content">
+            <h6>STUDENTS</h6>
+            <ng-container
+              *ngFor="let student of item.students | slice: 0:5; let a = index"
+            >
+              <span id="student-{{ a }}-{{ i }}">
+                <img class="student-card" [src]="item.image" alt="Students" />
+              </span>
+            </ng-container>
+            <ng-container *ngIf="item.students.length > 5">
+              <span>
+                <div class="student-card text-center">
+                  <p>+{{ item.students.length - 5 }}</p>
+                </div>
+              </span>
+            </ng-container>
+
+            <br />
+            <h6 class="mt-3">RECENT PROJECTS</h6>
+            <ng-container
+              *ngFor="let student of item.projects | slice: 0:3; let a = index"
+            >
+              <span id="student-{{ a }}-{{ i }}">
+                <img class="project-card" [src]="item.image" alt="Projects" />
+              </span>
+            </ng-container>
+            <ng-container *ngIf="item.students.length > 5">
+              <span>
+                <div class="project-card text-center">
+                  <p>+{{ item.projects.length - 3 }}</p>
+                </div>
+              </span>
+            </ng-container>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
+
+<!-- ? Short Cards -->
+<ng-template #shortCardsTMPL>
+  <div id="list-horizontal" class="list-group list-group-horizontal">
+    <div *ngFor="let item of instructors; let i = index">
+      <div class="sort-card" [style]="item.mainStyle">
+        <div class="top-layout text-center">
+          <img [src]="item.image" [alt]="item.name" />
+          <h4>
+            {{ item.name | titlecase }}
+          </h4>
+          <p>
+            {{ item.subject | titlecase }}
+          </p>
+          <div class="d-flex justify-content-end pim-0 badges">
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.time }} ago</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.trait | titlecase }}</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.attribute }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
