--- a/src/app/public/subjects/subjects.component.html
+++ b/src/app/public/subjects/subjects.component.html
@@ -28,7 +28,7 @@
         nbInput
         fullWidth
         fieldSize="small"
-        placeholder="search subject"
+        placeholder="subject search"
       />
     </nb-form-field>
   </div>
