--- a/src/app/public/calendar/calendar.component.html
+++ b/src/app/public/calendar/calendar.component.html
@@ -1,1 +1,84 @@
-<p>calendar works!</p>
+<div class="row">
+  <div id="filters-column" class="col-2 w-100 h-100">
+    <!-- ? Filters -->
+    <div
+      [nbSpinner]="isLoadingFilters"
+      nbSpinnerSize="giant"
+      nbSpinnerStatus="primary"
+      class="fixed"
+    >
+      <ng-container *ngTemplateOutlet="filtersTMPL"></ng-container>
+    </div>
+  </div>
+  <div id="subjects-column" class="col ml-3 w-100 h-100">
+    <!-- ? Calendar -->
+    <ng-container *ngTemplateOutlet="calendarTMPL"></ng-container>
+  </div>
+</div>
+
+<!-- ? Filters template -->
+<ng-template #filtersTMPL>
+  <h3 class="mt-3"><nb-icon icon="plus-outline"></nb-icon> New Event</h3>
+  <!-- Search Text Field -->
+  <div id="search-field" class="w-100">
+    <nb-form-field>
+      <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
+      <input
+        type="text"
+        nbInput
+        fullWidth
+        fieldSize="small"
+        placeholder="event search"
+      />
+    </nb-form-field>
+  </div>
+  <br />
+  <!-- Filter Items -->
+  <ng-container *ngFor="let item of filterItems; let i = index">
+    <h4 id="filter-item-{{ i }}">
+      {{ item.title | titlecase }}
+    </h4>
+    <ng-container *ngFor="let filter of item.items | slice: 0:3; let y = index">
+      <nb-checkbox class="check-box">
+        <p>
+          {{ filter.title | titlecase }}
+        </p>
+      </nb-checkbox>
+    </ng-container>
+    <ng-container *ngIf="item.items.length > 3">
+      <p class="pointer see-more">See more</p>
+    </ng-container>
+  </ng-container>
+</ng-template>
+
+<!-- ? Calendar Template -->
+<ng-template #calendarTMPL>
+  <div class="row">
+    <div class="col-12 text-center">
+      <h1>Calendar</h1>
+    </div>
+    <div class="co-12 w-100">
+      <div class="calendar-filters d-flex justify-content-between w-100">
+        <div class="p-2">
+          <nb-radio value="1"><p>Select</p></nb-radio>
+        </div>
+        <div class="p-2">
+          <nb-icon icon="calendar-outline"></nb-icon> Day
+          <nb-icon icon="calendar-outline"></nb-icon> Week
+          <nb-icon icon="calendar-outline"></nb-icon> Month
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <ng-container *ngTemplateOutlet="angularGanttTMPL"></ng-container>
+</ng-template>
+
+<!-- ? GANNT -->
+<ng-template #angularGanttTMPL>
+  <div class="row">
+    <div class="col-12">
+      <ngx-minty-gantt></ngx-minty-gantt>
+    </div>
+  </div>
+</ng-template>
