Students page and more instructors data.

--- a/src/app/public/subjects/subjects.component.scss
+++ b/src/app/public/subjects/subjects.component.scss
@@ -95,6 +95,7 @@
     .subject-card {
       background-color: rgb(183, 183, 183);
       border-radius: 1rem;
+      margin-bottom: 1.25rem;
 
       .subject-content-colum {
         padding: 1.75rem 1rem;
