--- a/src/app/public/detail/detail.component.html
+++ b/src/app/public/detail/detail.component.html
@@ -83,7 +83,11 @@
           "
         >
           <span id="student-{{ a }}-{{ i }}">
-            <img class="student-card" [src]="instructor.image" alt="Students" />
+            <img
+              class="student-card"
+              [src]="student.image || instructor.image"
+              alt="Students"
+            />
           </span>
         </ng-container>
         <ng-container *ngIf="instructor?.students?.length > 5">
@@ -98,15 +102,19 @@
         <h6 class="mt-3">RECENT PROJECTS</h6>
         <ng-container
           *ngFor="
-            let student of instructor.projects | slice: 0:3;
+            let project of instructor.projects | slice: 0:3;
             let a = index
           "
         >
-          <span id="student-{{ a }}-{{ i }}">
-            <img class="project-card" [src]="instructor.image" alt="Projects" />
+          <span id="project-{{ a }}-{{ i }}">
+            <img
+              class="project-card"
+              [src]="project.image || instructor.image"
+              alt="Projects"
+            />
           </span>
         </ng-container>
-        <ng-container *ngIf="instructor?.students?.length > 5">
+        <ng-container *ngIf="instructor?.projects?.length > 5">
           <span>
             <div class="project-card text-center">
               <p>+{{ instructor.projects.length - 3 }}</p>
@@ -188,11 +196,11 @@
       <!--  -->
       <div class="row">
         <div class="col-2">
-          <img [src]="instructor.image" alt="Student" />
+          <img [src]="instructor.students[0].image" alt="Student" />
         </div>
         <div class="col-9">
           <div class="student-txt">
-            <h6>Name Surname</h6>
+            <h6>Jaiden Vu</h6>
             <p class="student-review text-light">
               Student Review Lorem ipsum dolor, sit amet consectetur adipisicing
               elit. Inventore modi non aut. Provident labore qui commodi
