--- a/src/app/public/detail/detail.component.scss
+++ b/src/app/public/detail/detail.component.scss
@@ -46,6 +46,7 @@
             height: 6rem;
             width: 6rem;
             border-radius: 3rem;
+            object-fit: cover;
           }
 
           h4 {
@@ -104,6 +105,7 @@
             border-radius: 2rem;
             margin-left: -0.8rem;
             background-color: white;
+            object-fit: cover;
 
             p {
               margin-bottom: 0 !important;
@@ -118,6 +120,7 @@
             border-radius: 0.6rem;
             margin-right: 6px;
             background-color: white;
+            object-fit: cover;
 
             p {
               margin-bottom: 0 !important;
@@ -197,6 +200,7 @@
 
           .student-img-content {
             min-height: 22vh;
+            object-fit: cover;
           }
         }
 
@@ -213,6 +217,7 @@
             height: 4rem;
             width: 4rem;
             border-radius: 2rem;
+            object-fit: cover;
           }
 
           .student-txt {
