--- a/src/app/public/instructors/instructors.component.html
+++ b/src/app/public/instructors/instructors.component.html
@@ -18,7 +18,7 @@
 
 <!-- ? Filters template -->
 <ng-template #filtersTMPL>
-  <h3 class="mt-3"><nb-icon icon="plus-outline"></nb-icon> New Subject</h3>
+  <h3 class="mt-3"><nb-icon icon="plus-outline"></nb-icon> New Instructor</h3>
   <!-- Search Text Field -->
   <div id="search-field" class="w-100">
     <nb-form-field>
@@ -83,7 +83,7 @@
       <div
         class="long-card pointer"
         [style]="item.mainStyle"
-        (click)="onGetDetail({ _id: item._id })"
+        (click)="onGetDetail({ _id: item.id })"
       >
         <div class="top-layout text-center">
           <img [src]="item.image" [alt]="item.name" />
@@ -93,7 +93,7 @@
           <p>
             {{ item.subject | titlecase }}
           </p>
-          <div class="d-flex justify-content-end pim-0 badges">
+          <div class="d-flex justify-content-center pim-0 badges">
             <div class="p-2">
               <div class="card-badge h-100">
                 <p>{{ item?.time }} ago</p>
@@ -119,7 +119,11 @@
               *ngFor="let student of item.students | slice: 0:5; let a = index"
             >
               <span id="student-{{ a }}-{{ i }}">
-                <img class="student-card" [src]="item.image" alt="Students" />
+                <img
+                  class="student-card"
+                  [src]="student.image || item.image"
+                  alt="Students"
+                />
               </span>
             </ng-container>
             <ng-container *ngIf="item.students.length > 5">
@@ -133,13 +137,17 @@
             <br />
             <h6 class="mt-3">RECENT PROJECTS</h6>
             <ng-container
-              *ngFor="let student of item.projects | slice: 0:3; let a = index"
+              *ngFor="let project of item.projects | slice: 0:3; let a = index"
             >
-              <span id="student-{{ a }}-{{ i }}">
-                <img class="project-card" [src]="item.image" alt="Projects" />
+              <span id="project-{{ a }}-{{ i }}">
+                <img
+                  class="project-card"
+                  [src]="project.image || item - image"
+                  alt="Projects"
+                />
               </span>
             </ng-container>
-            <ng-container *ngIf="item.students.length > 5">
+            <ng-container *ngIf="item.projects.length > 5">
               <span>
                 <div class="project-card text-center">
                   <p>+{{ item.projects.length - 3 }}</p>
@@ -150,17 +158,21 @@
         </div>
       </div>
     </div>
+
+    <div class="list-spacer">
+      <div class="long-card"></div>
+    </div>
   </div>
 </ng-template>
 
 <!-- ? Short Cards -->
 <ng-template #shortCardsTMPL>
   <div id="list-horizontal" class="list-group list-group-horizontal">
-    <div *ngFor="let item of instructors; let i = index">
+    <div *ngFor="let item of instructors | slice: 0:4; let i = index">
       <div
         class="sort-card pointer"
         [style]="item.mainStyle"
-        (click)="onGetDetail({ _id: item._id })"
+        (click)="onGetDetail({ _id: item.id })"
       >
         <div class="top-layout text-center">
           <img [src]="item.image" [alt]="item.name" />
@@ -170,7 +182,7 @@
           <p>
             {{ item.subject | titlecase }}
           </p>
-          <div class="d-flex justify-content-end pim-0 badges">
+          <div class="d-flex justify-content-center pim-0 badges">
             <div class="p-2">
               <div class="card-badge h-100">
                 <p>{{ item?.time }} ago</p>
@@ -188,7 +200,46 @@
             </div>
           </div>
         </div>
+
+        <div
+          *ngIf="i < instructors.length - 4"
+          class="bottom-layout text-center pointer"
+          (click)="onGetDetail({ _id: instructors[i + 4].id })"
+          [style]="instructors[i + 4].mainStyle"
+        >
+          <img
+            [src]="instructors[i + 4].image"
+            [alt]="instructors[i + 4].name"
+          />
+          <h4>
+            {{ instructors[i + 4].name | titlecase }}
+          </h4>
+          <p>
+            {{ instructors[i + 4].subject | titlecase }}
+          </p>
+          <div class="d-flex justify-content-center pim-0 badges">
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ instructors[i + 4].time }} ago</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ instructors[i + 4].trait | titlecase }}</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ instructors[i + 4].attribute }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+
+    <div class="list-spacer">
+      <div class="long-card"></div>
     </div>
   </div>
 </ng-template>
