--- a/src/app/public/instructors/instructors.component.scss
+++ b/src/app/public/instructors/instructors.component.scss
@@ -100,13 +100,18 @@
 
     .card-layout-tmpl {
       overflow-x: auto;
-      height: 64vh;
+      // height: 64vh;
       min-width: 100%;
       margin-top: 1rem;
       margin-left: 16%;
 
       #list-horizontal {
         // margin-left: 1rem;
+        .list-spacer {
+          width: 100vw;
+          height: 100%;
+          background-color: none;
+        }
       }
 
       .long-card {
@@ -114,7 +119,7 @@
         width: 280px;
         min-height: 580px;
         margin-right: 1rem;
-        background-color: blue;
+        background-color: none;
         border-radius: 1rem;
         position: relative;
 
@@ -132,6 +137,7 @@
             height: 6rem;
             width: 6rem;
             border-radius: 3rem;
+            object-fit: cover;
           }
 
           h4 {
@@ -186,6 +192,7 @@
             border-radius: 2rem;
             margin-left: -0.8rem;
             background-color: white;
+            object-fit: cover;
 
             p {
               margin-bottom: 0 !important;
@@ -200,6 +207,7 @@
             border-radius: 0.6rem;
             margin-right: 6px;
             background-color: white;
+            object-fit: cover;
 
             p {
               margin-bottom: 0 !important;
@@ -232,6 +240,32 @@
             height: 6rem;
             width: 6rem;
             border-radius: 3rem;
+            object-fit: cover;
+          }
+
+          h4 {
+            font-size: normal;
+            font-variant: normal;
+            font-weight: medium;
+            font-size: 16px;
+            line-height: 27px;
+            font-family: "Roboto", sans-serif;
+            margin-top: 2rem;
+          }
+        }
+
+        .bottom-layout {
+          padding: 3rem 0rem;
+          align-content: center;
+          background-color: rgb(152, 152, 152);
+          margin-top: 2rem;
+          border-radius: 1rem;
+
+          img {
+            height: 6rem;
+            width: 6rem;
+            border-radius: 3rem;
+            object-fit: cover;
           }
 
           h4 {
