--- a/src/app/public/students/students.component.html
+++ b/src/app/public/students/students.component.html
@@ -1,1 +1,145 @@
-<p>students works!</p>
+<div class="row">
+  <div id="filters-column" class="col-2 w-100 h-100">
+    <!-- ? Filters -->
+    <div
+      [nbSpinner]="isLoadingFilters"
+      nbSpinnerSize="giant"
+      nbSpinnerStatus="primary"
+      class="fixed"
+    >
+      <ng-container *ngTemplateOutlet="filtersTMPL"></ng-container>
+    </div>
+  </div>
+  <div id="instructors-column" class="col ml-3 w-100 h-100">
+    <!-- ? Instructors -->
+    <ng-container *ngTemplateOutlet="instructorsTMPL"></ng-container>
+  </div>
+</div>
+
+<!-- ? Filters template -->
+<ng-template #filtersTMPL>
+  <h3 class="mt-3"><nb-icon icon="plus-outline"></nb-icon> New Student</h3>
+  <!-- Search Text Field -->
+  <div id="search-field" class="w-100">
+    <nb-form-field>
+      <nb-icon nbPrefix icon="search-outline" pack="eva"></nb-icon>
+      <input
+        type="text"
+        nbInput
+        fullWidth
+        fieldSize="small"
+        placeholder="student search"
+      />
+    </nb-form-field>
+  </div>
+  <br />
+  <!-- Filter Items -->
+  <ng-container *ngFor="let item of filterItems; let i = index">
+    <h4 id="filter-item-{{ i }}">
+      {{ item.title | titlecase }}
+    </h4>
+    <ng-container *ngFor="let filter of item.items | slice: 0:3; let y = index">
+      <nb-checkbox class="check-box">
+        <p>
+          {{ filter.title | titlecase }}
+        </p>
+      </nb-checkbox>
+    </ng-container>
+    <ng-container *ngIf="item.items.length > 3">
+      <p class="pointer see-more">See more</p>
+    </ng-container>
+  </ng-container>
+</ng-template>
+
+<!-- ? Instructors Template -->
+<ng-template #instructorsTMPL>
+  <div class="row instructors-header">
+    <div class="col-12 text-center">
+      <h1 id="instructors-title">Students</h1>
+    </div>
+  </div>
+
+  <!-- Instructors List - LongCards -->
+  <div class="card-layout-tmpl">
+    <ng-container *ngTemplateOutlet="shortCardsTMPL"></ng-container>
+  </div>
+</ng-template>
+
+<!-- ? Short Cards -->
+<ng-template #shortCardsTMPL>
+  <div id="list-horizontal" class="list-group list-group-horizontal">
+    <div *ngFor="let item of instructors | slice: 0:4; let i = index">
+      <div
+        class="sort-card pointer"
+        [style]="item.mainStyle"
+        (click)="onGetDetail({ _id: item.id })"
+      >
+        <div class="top-layout text-center">
+          <img [src]="item.image" [alt]="item.name" />
+          <h4>
+            {{ item.name | titlecase }}
+          </h4>
+          <p>
+            {{ item.subject | titlecase }}
+          </p>
+          <div class="d-flex justify-content-center pim-0 badges">
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.time }} ago</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.trait | titlecase }}</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ item?.attribute }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          *ngIf="i < instructors.length - 4"
+          class="bottom-layout text-center pointer"
+          (click)="onGetDetail({ _id: instructors[i + 4].id })"
+          [style]="instructors[i + 4].mainStyle"
+        >
+          <img
+            [src]="instructors[i + 4].image"
+            [alt]="instructors[i + 4].name"
+          />
+          <h4>
+            {{ instructors[i + 4].name | titlecase }}
+          </h4>
+          <p>
+            {{ instructors[i + 4].subject | titlecase }}
+          </p>
+          <div class="d-flex justify-content-center pim-0 badges">
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ instructors[i + 4].time }} ago</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ instructors[i + 4].trait | titlecase }}</p>
+              </div>
+            </div>
+            <div class="p-2">
+              <div class="card-badge h-100">
+                <p>{{ instructors[i + 4].attribute }}</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="list-spacer">
+      <div class="long-card"></div>
+    </div>
+  </div>
+</ng-template>
