Added subject ID and eliminated unused code in GeneralService.

--- a/src/app/public/subjects/subjects.component.html
+++ b/src/app/public/subjects/subjects.component.html
@@ -68,7 +68,7 @@
     id="{{ x }}-subject"
     class="row mb-3 w-100"
   >
-    <div class="subject-card pointer" (click)="onGetDetail({ _id: item._id })">
+    <div class="subject-card pointer" (click)="onGetDetail({ _id: item.id })">
       <div class="row">
         <div class="col-6 subject-image-colum">
           <!-- Image -->
