--- a/src/app/public/subjects/subjects.component.scss
+++ b/src/app/public/subjects/subjects.component.scss
@@ -98,6 +98,11 @@
       border-radius: 1rem;
       margin-bottom: 1.25rem;
 
+      .background-subject-info {
+        border-top-right-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+      }
+
       .subject-content-colum {
         padding: 1.75rem 1rem;
       }
