--- a/src/app/public/students/students.component.scss
+++ b/src/app/public/students/students.component.scss
@@ -99,130 +99,13 @@
     }
 
     .card-layout-tmpl {
-      overflow-x: auto;
-      // height: 64vh;
-      min-width: 100%;
+      overflow-x: hidden;
       margin-top: 1rem;
       margin-left: 16%;
-
-      #list-horizontal {
-        // margin-left: 1rem;
-        .list-spacer {
-          width: 100vw;
-          height: 100%;
-          background-color: none;
-        }
-      }
-
-      .long-card {
-        height: 100%;
-        width: 280px;
-        min-height: 580px;
-        margin-right: 1rem;
-        background-color: none;
-        border-radius: 1rem;
-        position: relative;
-
-        p {
-          font-size: 14px;
-          font-family: "Roboto", sans-serif;
-          margin-bottom: 0 !important;
-        }
-
-        .top-layout {
-          padding: 3rem 0rem;
-          align-content: center;
-
-          img {
-            height: 6rem;
-            width: 6rem;
-            border-radius: 3rem;
-            object-fit: cover;
-          }
-
-          h4 {
-            font-size: normal;
-            font-variant: normal;
-            font-weight: medium;
-            font-size: 16px;
-            line-height: 27px;
-            font-family: "Roboto", sans-serif;
-            margin-top: 2rem;
-          }
-        }
-
-        .badges {
-          margin-top: 2rem;
-        }
-
-        .card-badge {
-          background-color: #fff;
-          min-width: 60px;
-          padding: 0.25rem 0.5rem;
-          border-radius: 7px;
-
-          p {
-            font-size: 10px;
-            margin-bottom: 0 !important;
-          }
-        }
-
-        .bottom-layout {
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          height: 40%;
-          border-bottom-right-radius: 1rem;
-          border-bottom-left-radius: 1rem;
-
-          .bt-content {
-            margin-top: 3rem;
-          }
-
-          h6 {
-            font-size: 12px;
-            color: #fff;
-          }
-
-          .student-card {
-            display: inline-block;
-            height: 2rem;
-            width: 2rem;
-            border-radius: 2rem;
-            margin-left: -0.8rem;
-            background-color: white;
-            object-fit: cover;
-
-            p {
-              margin-bottom: 0 !important;
-              margin: 0.3rem;
-            }
-          }
-
-          .project-card {
-            display: inline-block;
-            height: 2.8rem;
-            width: 2.8rem;
-            border-radius: 0.6rem;
-            margin-right: 6px;
-            background-color: white;
-            object-fit: cover;
-
-            p {
-              margin-bottom: 0 !important;
-              margin: 0.75rem;
-            }
-          }
-        }
-      }
+      padding-right: 3rem;
 
       .sort-card {
-        height: 50%;
-        width: 280px;
-        min-height: 290px;
-        margin-right: 1rem;
-        background-color: blue;
+        height: 90%;
         border-radius: 1rem;
         position: relative;
 
