--- a/src/app/public/subjects/subjects.component.html
+++ b/src/app/public/subjects/subjects.component.html
@@ -70,7 +70,7 @@
   >
     <div class="subject-card pointer" (click)="onGetDetail({ _id: item.id })">
       <div class="row">
-        <div class="col-6 subject-image-colum">
+        <div class="col-6 subject-image-colum" [style]="item.secondaryStyle">
           <!-- Image -->
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="p-2">
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 p-3">
+        <div class="col-6 p-3 background-subject-info" [style]="item.mainStyle">
           <div class="subject-content-colum">
             <!-- Content -->
             <div class="row">
