--- a/src/app/public/detail/detail.component.html
+++ b/src/app/public/detail/detail.component.html
@@ -196,7 +196,11 @@
       <!--  -->
       <div class="row">
         <div class="col-2">
-          <img [src]="instructor.students[0].image" alt="Student" />
+          <img
+            *ngIf="instructor.students?.length && instructor.students[0]"
+            [src]="instructor.students[0].image"
+            alt="Student"
+          />
         </div>
         <div class="col-9">
           <div class="student-txt">
