--- a/src/app/public/subjects/subjects.component.html
+++ b/src/app/public/subjects/subjects.component.html
@@ -5,7 +5,7 @@
       [nbSpinner]="isLoadingFilters"
       nbSpinnerSize="giant"
       nbSpinnerStatus="primary"
-      class="fixed"
+      class="fixed-filter"
     >
       <ng-container *ngTemplateOutlet="filtersTMPL"></ng-container>
     </div>
